dataset1235/2025-2/1153765216/users/3894411613/executions/3138746197_4190502342.log
== SUBMISSION (2025-08-12 20:51:40)
-- CODE: 
print(180/4)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
---- user output:
45.0
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
---- user output:
45.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 20:51:26)
-- CODE: 
print(180:4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
-- ERROR:
File "XXXX", line 1
    print(180:4)
             ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
-- ERROR:
File "XXXX", line 1
    print(180:4)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 20:51:37)
-- CODE: 
print(180/4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
---- user output:
45.0
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
---- user output:
45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
